--- a/PyQt_app.ui
+++ b/PyQt_app.ui
@@ -52,7 +52,7 @@
      <string>URL</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="lineEdit_URL">
     <property name="geometry">
      <rect>
       <x>50</x>
@@ -75,7 +75,7 @@
      <string>Body message</string>
     </property>
    </widget>
-   <widget class="QLCDNumber" name="lcdNumber">
+   <widget class="QLCDNumber" name="lcd_temp">
     <property name="geometry">
      <rect>
       <x>550</x>
@@ -117,7 +117,7 @@
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QLCDNumber" name="lcdNumber_2">
+   <widget class="QLCDNumber" name="lcd_rgb_r">
     <property name="geometry">
      <rect>
       <x>540</x>
@@ -148,7 +148,7 @@
      <double>5.000000000000000</double>
     </property>
    </widget>
-   <widget class="QLCDNumber" name="lcdNumber_3">
+   <widget class="QLCDNumber" name="lcd_rgb_g">
     <property name="geometry">
      <rect>
       <x>620</x>
@@ -167,7 +167,7 @@
      <double>5.000000000000000</double>
     </property>
    </widget>
-   <widget class="QLCDNumber" name="lcdNumber_4">
+   <widget class="QLCDNumber" name="lcd_rgb_b">
     <property name="geometry">
      <rect>
       <x>700</x>
@@ -260,7 +260,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_sensor_megalka1">
+   <widget class="QLabel" name="label_lamp1_on">
     <property name="geometry">
      <rect>
       <x>390</x>
@@ -279,7 +279,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_sensor_print1">
+   <widget class="QLabel" name="label_lamp1_off">
     <property name="enabled">
      <bool>true</bool>
     </property>
@@ -301,7 +301,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_sensor1">
+   <widget class="QPushButton" name="pushButton_turn_on_lamp1">
     <property name="geometry">
      <rect>
       <x>390</x>
@@ -314,7 +314,7 @@
      <string>Вкл</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_sensor2">
+   <widget class="QPushButton" name="pushButton_turn_on_lamp2">
     <property name="geometry">
      <rect>
       <x>480</x>
@@ -327,7 +327,7 @@
      <string>Вкл</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_sensor_megalka2">
+   <widget class="QLabel" name="label_lamp2_on">
     <property name="geometry">
      <rect>
       <x>480</x>
@@ -346,7 +346,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_sensor_print2">
+   <widget class="QLabel" name="label_lamp2_off">
     <property name="geometry">
      <rect>
       <x>480</x>
@@ -365,7 +365,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_sensor3">
+   <widget class="QPushButton" name="pushButton_turn_on_lamp3">
     <property name="geometry">
      <rect>
       <x>570</x>
@@ -378,7 +378,7 @@
      <string>Вкл</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_sensor_megalka3">
+   <widget class="QLabel" name="label_lamp3_on">
     <property name="geometry">
      <rect>
       <x>570</x>
@@ -397,7 +397,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_sensor_print3">
+   <widget class="QLabel" name="label_lamp3_off">
     <property name="geometry">
      <rect>
       <x>570</x>
@@ -528,7 +528,7 @@
      <double>5.000000000000000</double>
     </property>
    </widget>
-   <widget class="QLCDNumber" name="lcdNumber_7">
+   <widget class="QLCDNumber" name="lcd_illumination">
     <property name="geometry">
      <rect>
       <x>550</x>
@@ -564,7 +564,7 @@
      <string>Освещенность</string>
     </property>
    </widget>
-   <widget class="QLCDNumber" name="lcdNumber_8">
+   <widget class="QLCDNumber" name="lcd_illumination2">
     <property name="geometry">
      <rect>
       <x>550</x>
@@ -620,7 +620,7 @@
      <string>Акселлерометр</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="vkl_b">
+   <widget class="QPushButton" name="pushButton_leds_on">
     <property name="geometry">
      <rect>
       <x>1099</x>
@@ -633,7 +633,7 @@
      <string>Вкл</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="vikl_b">
+   <widget class="QPushButton" name="pushButton_leds_off">
     <property name="geometry">
      <rect>
       <x>1099</x>
@@ -646,7 +646,7 @@
      <string>Выкл</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="color_b">
+   <widget class="QPushButton" name="pushButton_leds_color">
     <property name="geometry">
      <rect>
       <x>1099</x>
@@ -836,7 +836,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QLCDNumber" name="lcdNumber_5">
+   <widget class="QLCDNumber" name="lcd_xyz_x">
     <property name="geometry">
      <rect>
       <x>540</x>
@@ -864,7 +864,7 @@
      <enum>QLCDNumber::Flat</enum>
     </property>
    </widget>
-   <widget class="QLCDNumber" name="lcdNumber_6">
+   <widget class="QLCDNumber" name="lcd_xyz_z">
     <property name="geometry">
      <rect>
       <x>700</x>
@@ -880,7 +880,7 @@
      <enum>QLCDNumber::Flat</enum>
     </property>
    </widget>
-   <widget class="QLCDNumber" name="lcdNumber_9">
+   <widget class="QLCDNumber" name="lcd_xyz_y">
     <property name="geometry">
      <rect>
       <x>620</x>
@@ -986,7 +986,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_send_get">
+   <widget class="QPushButton" name="pushButton_send_get_request">
     <property name="geometry">
      <rect>
       <x>1050</x>
@@ -999,7 +999,7 @@
      <string>SEND Get request</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_2">
+   <widget class="QLineEdit" name="lineEdit_request">
     <property name="geometry">
      <rect>
       <x>790</x>
