--- a/PyQt_app.ui
+++ b/PyQt_app.ui
@@ -29,9 +29,9 @@
    <widget class="QPushButton" name="pushButton_send_post">
     <property name="geometry">
      <rect>
-      <x>1050</x>
+      <x>980</x>
       <y>10</y>
-      <width>101</width>
+      <width>201</width>
       <height>21</height>
      </rect>
     </property>
@@ -42,9 +42,9 @@
    <widget class="QLabel" name="label_url">
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>350</x>
       <y>0</y>
-      <width>41</width>
+      <width>61</width>
       <height>41</height>
      </rect>
     </property>
@@ -55,9 +55,9 @@
    <widget class="QLineEdit" name="lineEdit_URL">
     <property name="geometry">
      <rect>
-      <x>350</x>
+      <x>430</x>
       <y>10</y>
-      <width>681</width>
+      <width>531</width>
       <height>21</height>
      </rect>
     </property>
@@ -67,8 +67,8 @@
      <rect>
       <x>10</x>
       <y>40</y>
-      <width>71</width>
-      <height>20</height>
+      <width>261</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
@@ -102,9 +102,9 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
+      <pointsize>8</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
      </font>
     </property>
     <property name="text">
@@ -222,7 +222,7 @@
      <string>B</string>
     </property>
    </widget>
-   <widget class="QLabel" name="off_1">
+   <widget class="QLabel" name="label_tumbler_off1">
     <property name="geometry">
      <rect>
       <x>804</x>
@@ -241,7 +241,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="on_1">
+   <widget class="QLabel" name="label_tumbler_on1">
     <property name="geometry">
      <rect>
       <x>804</x>
@@ -416,7 +416,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="off_2">
+   <widget class="QLabel" name="label_tumbler_off2">
     <property name="geometry">
      <rect>
       <x>904</x>
@@ -435,7 +435,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="on_2">
+   <widget class="QLabel" name="label_tumbler_on2">
     <property name="geometry">
      <rect>
       <x>904</x>
@@ -454,7 +454,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="off_3">
+   <widget class="QLabel" name="label_tumbler_off3">
     <property name="geometry">
      <rect>
       <x>994</x>
@@ -473,7 +473,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="on_3">
+   <widget class="QLabel" name="label_tumbler_on3">
     <property name="geometry">
      <rect>
       <x>994</x>
@@ -503,9 +503,9 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
+      <pointsize>8</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
      </font>
     </property>
     <property name="text">
@@ -555,9 +555,9 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
+      <pointsize>8</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
      </font>
     </property>
     <property name="text">
@@ -591,9 +591,9 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
+      <pointsize>8</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
      </font>
     </property>
     <property name="text">
@@ -611,9 +611,9 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
+      <pointsize>8</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
      </font>
     </property>
     <property name="text">
@@ -901,15 +901,15 @@
      <rect>
       <x>310</x>
       <y>460</y>
-      <width>211</width>
+      <width>221</width>
       <height>41</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
+      <pointsize>8</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
      </font>
     </property>
     <property name="text">
@@ -960,16 +960,16 @@
      <rect>
       <x>900</x>
       <y>80</y>
-      <width>81</width>
+      <width>151</width>
       <height>20</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Times New Roman</family>
-      <pointsize>12</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
+      <pointsize>8</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
      </font>
     </property>
     <property name="text">
@@ -980,18 +980,18 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>60</y>
+      <y>70</y>
       <width>291</width>
-      <height>531</height>
+      <height>521</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_send_get">
     <property name="geometry">
      <rect>
-      <x>1050</x>
+      <x>980</x>
       <y>40</y>
-      <width>101</width>
+      <width>201</width>
       <height>21</height>
      </rect>
     </property>
@@ -1002,9 +1002,9 @@
    <widget class="QLineEdit" name="lineEdit_request">
     <property name="geometry">
      <rect>
-      <x>350</x>
+      <x>430</x>
       <y>40</y>
-      <width>681</width>
+      <width>531</width>
       <height>21</height>
      </rect>
     </property>
@@ -1012,9 +1012,9 @@
    <widget class="QCheckBox" name="checkBox_autoupdate">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>170</x>
       <y>10</y>
-      <width>81</width>
+      <width>161</width>
       <height>21</height>
      </rect>
     </property>
@@ -1022,27 +1022,46 @@
      <string>Автообновление</string>
     </property>
    </widget>
-   <widget class="QTimeEdit" name="timeEdit_autoupdate">
+   <widget class="QSpinBox" name="spinBox_autoupdate">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>121</width>
+      <width>91</width>
       <height>21</height>
      </rect>
+    </property>
+    <property name="minimum">
+     <number>1</number>
+    </property>
+    <property name="maximum">
+     <number>1000</number>
     </property>
    </widget>
    <widget class="QLabel" name="label_url_2">
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>350</x>
       <y>30</y>
-      <width>41</width>
+      <width>61</width>
       <height>41</height>
      </rect>
     </property>
     <property name="text">
      <string>Post URL</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_secends">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>10</y>
+      <width>41</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>сек.</string>
     </property>
    </widget>
   </widget>
