--- a/PyQt_app.ui
+++ b/PyQt_app.ui
@@ -42,14 +42,14 @@
    <widget class="QLabel" name="label_url">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>10</y>
-      <width>71</width>
-      <height>21</height>
+      <x>350</x>
+      <y>0</y>
+      <width>61</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
-     <string>GET URL</string>
+     <string>Get URL</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit_URL">
@@ -103,6 +103,7 @@
     <property name="font">
      <font>
       <pointsize>8</pointsize>
+      <weight>50</weight>
       <bold>false</bold>
      </font>
     </property>
@@ -127,6 +128,7 @@
     </property>
     <property name="font">
      <font>
+      <weight>50</weight>
       <bold>false</bold>
      </font>
     </property>
@@ -233,7 +235,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="res/Res.qrc">:/img/off.svg</pixmap>
+     <pixmap resource="../res/Res.qrc">:/img/off.svg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -252,7 +254,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="res/Res.qrc">:/img/ON.svg</pixmap>
+     <pixmap resource="../res/Res.qrc">:/img/ON.svg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -271,7 +273,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="res/Res.qrc">:/img/led_on.svg</pixmap>
+     <pixmap resource="../res/Res.qrc">:/img/led_on.svg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -293,7 +295,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="res/Res.qrc">:/img/led_off.svg</pixmap>
+     <pixmap resource="../res/Res.qrc">:/img/led_off.svg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -338,7 +340,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="res/Res.qrc">:/img/led_on.svg</pixmap>
+     <pixmap resource="../res/Res.qrc">:/img/led_on.svg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -357,7 +359,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="res/Res.qrc">:/img/led_off.svg</pixmap>
+     <pixmap resource="../res/Res.qrc">:/img/led_off.svg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -389,7 +391,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="res/Res.qrc">:/img/led_on.svg</pixmap>
+     <pixmap resource="../res/Res.qrc">:/img/led_on.svg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -408,7 +410,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="res/Res.qrc">:/img/led_off.svg</pixmap>
+     <pixmap resource="../res/Res.qrc">:/img/led_off.svg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -427,7 +429,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="res/Res.qrc">:/img/off.svg</pixmap>
+     <pixmap resource="../res/Res.qrc">:/img/off.svg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -446,7 +448,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="res/Res.qrc">:/img/ON.svg</pixmap>
+     <pixmap resource="../res/Res.qrc">:/img/ON.svg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -465,7 +467,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="res/Res.qrc">:/img/off.svg</pixmap>
+     <pixmap resource="../res/Res.qrc">:/img/off.svg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -484,7 +486,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="res/Res.qrc">:/img/ON.svg</pixmap>
+     <pixmap resource="../res/Res.qrc">:/img/ON.svg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -502,6 +504,7 @@
     <property name="font">
      <font>
       <pointsize>8</pointsize>
+      <weight>50</weight>
       <bold>false</bold>
      </font>
     </property>
@@ -553,6 +556,7 @@
     <property name="font">
      <font>
       <pointsize>8</pointsize>
+      <weight>50</weight>
       <bold>false</bold>
      </font>
     </property>
@@ -560,7 +564,7 @@
      <string>Освещенность</string>
     </property>
    </widget>
-   <widget class="QLCDNumber" name="lcd_ambient_light">
+   <widget class="QLCDNumber" name="lcd_abient_light">
     <property name="geometry">
      <rect>
       <x>550</x>
@@ -588,6 +592,7 @@
     <property name="font">
      <font>
       <pointsize>8</pointsize>
+      <weight>50</weight>
       <bold>false</bold>
      </font>
     </property>
@@ -607,6 +612,7 @@
     <property name="font">
      <font>
       <pointsize>8</pointsize>
+      <weight>50</weight>
       <bold>false</bold>
      </font>
     </property>
@@ -841,6 +847,7 @@
     </property>
     <property name="font">
      <font>
+      <weight>50</weight>
       <bold>false</bold>
      </font>
     </property>
@@ -901,6 +908,7 @@
     <property name="font">
      <font>
       <pointsize>8</pointsize>
+      <weight>50</weight>
       <bold>false</bold>
      </font>
     </property>
@@ -958,8 +966,9 @@
     </property>
     <property name="font">
      <font>
-      <family>Times New Roman</family>
+      <family>MS Shell Dlg 2</family>
       <pointsize>8</pointsize>
+      <weight>50</weight>
       <bold>false</bold>
      </font>
     </property>
@@ -1032,14 +1041,14 @@
    <widget class="QLabel" name="label_url_2">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>40</y>
-      <width>71</width>
-      <height>21</height>
+      <x>350</x>
+      <y>30</y>
+      <width>61</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
-     <string>POST URL</string>
+     <string>Post URL</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_secends">
@@ -1062,14 +1071,13 @@
      <x>0</x>
      <y>0</y>
      <width>1185</width>
-     <height>28</height>
+     <height>18</height>
     </rect>
    </property>
   </widget>
  </widget>
  <resources>
-  <include location="res/Res.qrc"/>
-  <include location="res/Res.qrc"/>
+  <include location="../res/Res.qrc"/>
  </resources>
  <connections/>
 </ui>
